--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Veez Video Stream Bot",
+    "name": "Virtual Stream Bot",
     "description": "telegram bot for streaming video trought the telegram group video chat, powered by pytgcalls and pyrogram",
     "logo": "https://telegra.ph/file/103a5208bb1698a8b33de.png",
     "keywords": [
@@ -7,9 +7,9 @@
         "telegram bot",
         "video stream"
     ],
-    "website": "https://t.me/levinachannel",
-    "repository": "https://github.com/levina-lab/video-stream",
-    "success_url": "https://t.me/dlwrml",
+    "website": "https://t.me/VirtualMusicChannel",
+    "repository": "https://github.com/Tonic990/VirtualStream",
+    "success_url": "https://t.me/Bukan_guudlooking",
     "env": {
         "API_ID": {
             "description": "your APP_ID from my.telegram.org",
